--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -51,5 +51,5 @@
         android:id="@+id/signInFragment"
         android:name="ru.netology.SignInFragment"
         android:label="sing_in_fragment"
-        tools:layout="@layout/sing_in_fragment" />
+        tools:layout="@layout/fragment_sing_in" />
 </navigation>
