--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="39dp"
         android:lineSpacingExtra="15dp"
-        android:text="@string/annotation"
+        android:text="@string/annotationSignIn"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:padding="5dp"
@@ -36,10 +36,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />
+        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/inputLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/annotation" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText2"
+        android:id="@+id/inputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/inputLogin" />
 
     <TextView
         android:id="@+id/toSingUp"
