--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="32dp"
-    android:background="@color/lightBlueGrey"
+    android:background="@color/lightWhiteGreen"
     tools:context=".SignInFragment">
 
 
