--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_feedFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
     </fragment>
     <fragment
         android:id="@+id/addEditPostFragment"
@@ -52,4 +55,9 @@
         android:name="ru.netology.SignInFragment"
         android:label="sing_in_fragment"
         tools:layout="@layout/fragment_sing_in" />
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="ru.netology.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up" />
 </navigation>
