--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/annotation"
+        android:id="@+id/annotationSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/annotation" />
+        app:layout_constraintTop_toBottomOf="@+id/annotationSignIn" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/inputPassword"
