--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -54,7 +54,11 @@
         android:id="@+id/signInFragment"
         android:name="ru.netology.SignInFragment"
         android:label="sing_in_fragment"
-        tools:layout="@layout/fragment_sing_in" />
+        tools:layout="@layout/fragment_sing_in" >
+        <action
+            android:id="@+id/action_signInFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signUpFragment"
         android:name="ru.netology.SignUpFragment"
