--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputLogin2" />
 
     <TextView
-        android:id="@+id/toSingUp"
+        android:id="@+id/toSingIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
