corrected visibility of fab upTab

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -87,7 +87,7 @@
         android:backgroundTint="@color/purple_100"
         app:backgroundTint="@color/purple_100"
         android:clickable="true"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:contentDescription="@string/upTad"
         android:focusable="true"
         app:srcCompat="@drawable/ic_image_uploading_foreground" />
