--- a/app/src/main/res/layout/item_post_time.xml
+++ b/app/src/main/res/layout/item_post_time.xml
@@ -6,7 +6,7 @@
     android:padding="4dp">
 
     <TextView
-        android:id="@+id/time_tv"
+        android:id="@+id/time_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
